--- a/medication/pharmacist/templates/base.html
+++ b/medication/pharmacist/templates/base.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
         <script src="https://kit.fontawesome.com/855c35aed5.js" crossorigin="anonymous"></script>
-        <title>{% block title}{% endblock %}</title>
+        <title>{% block title %}{% endblock %}</title>
     </head>
     <body>
         <main>
