--- a/medication/pharmacist/templates/index.html
+++ b/medication/pharmacist/templates/index.html
@@ -9,14 +9,22 @@
         <div class="home-image">
             <img>
         </div>
-        <div class="search-input">
-            <input placeholder="Search for drugs" type="text" autofocus>
-            <br>
-            <div class="search-filter">
-                <input type="checkbox" name="Generic name">
-                <input type="checkbox" name="Brand name">
+        <form method="get">
+            {% csrf_token %}
+            <div class="search-input">
+
+                <input type="text" name="search_query" id="search_query" placeholder="Search for drugs">
+                
+
+                <div class="search-filter">
+                    <label><input type="checkbox" name="generic_name">Generic name</label>
+                    <label><input type="checkbox" name="brand_name"> Brand name</label>
+                </div>
+
+                <br><button id="search-button" type="submit">Search Drugs</button>
             </div>
-            <button id="search-button" type="submit">Search Drugs</button>
+        </form>
+        
         </div>
     </div>
 {% endblock %}
